--- a/waybar/style.css
+++ b/waybar/style.css
@@ -108,8 +108,8 @@ button:hover {
 }
 
 #clock {
-    background-color: #222;
-    color:#fff;
+    background-color: pink;
+    color:#000;
 }
 
 #battery {
