--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,134 +1,92 @@
 * {
-  /* `otf-font-awesome` is required to be installed for icons */
   font-family: "GoMonoNerdFont", Roboto, Helvetica, Arial, sans-serif;
   font-size: 14px;
+  border: none;
+  min-height: 25px;
+  color: white;
 }
 
 window#waybar {
-  background-color: rgba(100, 100, 100, 0.8);
-  border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-  color: #ffffff;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+  background: transparent;
+  margin: 5px;
 }
 
-window#waybar.hidden {
-  opacity: 0.2;
+/* #custom-logo { */
+/*   padding: 0 10px; */
+/* } */
+
+.modules-right {
+  padding-left: 5px;
+  border-radius: 15px 0 0 15px;
+  margin-top: 1px;
+  background: rgba(0, 0, 0, 0.6);
 }
 
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-window#waybar.termite {
-  background-color: #3f3f3f;
+.modules-center {
+  padding: 0 0px;
+  margin-top: 1px;
+  border-radius: 15px 15px 15px 15px;
+  background: rgba(0, 0, 0, 0.6);
 }
 
-window#waybar.chromium {
-  background-color: #000000;
-  border: none;
+.modules-left {
+  border-radius: 0 15px 15px 0;
+  margin-top: 1px;
+  background: rgba(0, 0, 0, 0.6);
+  padding-right: 5px;
 }
 
-button {
-  /* Use box-shadow instead of border so the text isn't offset */
-  box-shadow: inset 0 -3px transparent;
-  /* Avoid rounded borders under each button name */
-  border: none;
-  border-radius: 0px;
+#battery,
+#custom-clipboard,
+#custom-colorpicker,
+#custom-powerDraw,
+#bluetooth,
+#pulseaudio,
+#network,
+#disk,
+#memory,
+#backlight,
+#cpu,
+#temperature,
+#custom-weather,
+#idle_inhibitor,
+#jack,
+#tray,
+#window,
+#workspaces,
+#clock {
+  padding: 0 8px;
+}
+#pulseaudio {
+  padding-top: 3px;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-button:hover {
-  /*filter:blur(2px);*/
-  /*background-color: black;*/
-  box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button {
-  padding: 0 5px;
-  background-color: transparent;
-  color: #ffffff;
+#temperature.critical,
+#pulseaudio.muted {
+  /* color: #000; */
+  background-color: rgba(0, 0, 0, 0.5);
+  padding-top: 0;
 }
 
 #workspaces button:hover {
-  background: rgba(0, 0, 0, 0.8);
+  box-shadow: none; /* Remove predefined box-shadow */
+  text-shadow: none; /* Remove predefined text-shadow */
+  background: rgba(0, 0, 0, 0.2); 
+
 }
 
-#workspaces button.focused {
-  background-color: #64727d;
-  box-shadow: inset 0 -3px #ffffff;
+#clock, #window > * {
+  color: #def;
 }
 
-#workspaces button.urgent {
-  background-color: #eb4d4b;
-}
-
-#mode {
-  background-color: #64727d;
-  border-bottom: 3px solid #ffffff;
-}
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#mpd {
-  padding: 0 10px;
+#battery.charging {
   color: #ffffff;
+  background-color: #26a65b;
 }
 
-#window,
-#workspaces {
-  margin: 0 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-  margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-  margin-right: 0;
-}
-
-#clock {
-  background-color: #dedede;
-  color: #000;
-}
-
-#battery {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-#battery.charging,
-#battery.plugged {
-  color: #ffffff;
-  background-color: #567812;
-}
-
-@keyframes blink {
-  to {
-    background-color: #ffffff;
-    color: #000000;
-  }
+#battery.warning:not(.charging) {
+  background-color: #ccbe61;
+  color: black;
 }
 
 #battery.critical:not(.charging) {
@@ -141,127 +99,68 @@ button:hover {
   animation-direction: alternate;
 }
 
-label:focus {
-  background-color: #000000;
-}
-
-#cpu {
-  background-color: #8a7;
-  color: #000000;
-}
-
-#memory {
-  background-color: #769;
-}
-
-#disk {
-  background-color: #960;
-}
-
-#backlight {
-  background-color: #90b1b1;
-}
-
-#network {
-  background-color: #97e1ad;
-  color: black;
+@keyframes blink {
+  to {
+    background-color: #ffffff;
+    color: #000000;
+  }
 }
 
 #network.disconnected {
   background-color: #a31;
 }
 
-#pulseaudio {
-  background-color: #f1c40f;
-  color: #000000;
+/* #tray { */
+/*   background-color: rgba(0, 0, 0, 1); */
+/* } */
+/**/
+/* #tray > .passive { */
+/*   -gtk-icon-effect: dim; */
+/* } */
+/**/
+/* #tray > .needs-attention { */
+/*   -gtk-icon-effect: highlight; */
+/*   background-color: #eb4d4b; */
+/* } */
+
+/* Kalender-Hintergrund */
+#calendar {
+  background-color: #1e1e2e;
+  color: #cdd6f4;
+  border-radius: 8px;
+  padding: 5px;
 }
 
-#pulseaudio.muted {
-  background-color: #90b1b1;
-  color: #2a5c45;
+/* Header (Wochentage) */
+#calendar > box > label.header {
+  font-weight: bold;
+  color: #89b4fa;
 }
 
-#wireplumber {
-  background-color: #fff0f5;
-  color: #000000;
+/* Tage vom aktuellen Monat */
+#calendar > box > label {
+  padding: 4px;
+  margin: 2px;
+  border-radius: 4px;
 }
 
-#wireplumber.muted {
-  background-color: #f53c3c;
+/* Heute farbig hervorheben */
+#calendar > box > label.today {
+  background-color: #f38ba8; /* Highlight */
+  color: #ffffff;
+  font-weight: bold;
 }
 
-#custom-media {
-  background-color: #66cc99;
-  color: #2a5c45;
-  min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-  background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-  background-color: #ffa000;
-}
-
-#temperature {
-  background-color: #377;
-}
-
-#temperature.critical {
-  background-color: #e11;
-}
-
-#tray {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-#tray > .passive {
-  -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-  -gtk-icon-effect: highlight;
-  background-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-  background-color: #2d3436;
+/* Tage aus anderem Monat etwas ausgrauen */
+#calendar > box > label.other-month {
+  color: #585b70;
 }
 
 #idle_inhibitor.activated {
-  background-color: #ecf0f1;
-  color: #2d3436;
-}
-
-#mpd {
-  background-color: #66cc99;
-  color: #2a5c45;
-}
-
-#mpd.disconnected {
-  background-color: #f53c3c;
-}
-
-#mpd.stopped {
-  background-color: #90b1b1;
-}
-
-#mpd.paused {
-  background-color: #51a37a;
-}
-
-#language {
-  background: #00b093;
-  color: #740864;
-  padding: 0 5px;
-  margin: 0 5px;
-  min-width: 16px;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 #keyboard-state {
-  background: #97e1ad;
-  color: #000000;
   padding: 0 0px;
   margin: 0 0px;
   min-width: 16px;
@@ -283,8 +182,7 @@ label:focus {
   background-color: transparent;
 }
 .timer {
-  background-color: #ffee82;
-  color: #242424;
-  margin: 0 10px;
-  padding: 0 10px;
+  color: #efefef;
+  margin: 0 0px;
+  padding: 0 5px;
 }
