--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -17,22 +17,22 @@ window#waybar {
 
 .modules-right {
   padding-left: 5px;
-  border-radius: 15px 0 0 15px;
-  margin-top: 1px;
-  background: rgba(0, 0, 0, 0.6);
+  border-radius: .8rem 0 0 .8rem;
+  /* margin-top: 1px; */
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .modules-center {
   padding: 0 0px;
-  margin-top: 1px;
-  border-radius: 15px 15px 15px 15px;
-  background: rgba(0, 0, 0, 0.6);
+  /* margin-top: 1px; */
+  border-radius: .8rem;
+  background: rgba(0, 0, 0, 0.75);
 }
 
 .modules-left {
-  border-radius: 0 15px 15px 0;
-  margin-top: 1px;
-  background: rgba(0, 0, 0, 0.6);
+  border-radius: 0 .8rem .8rem 0;
+  /* margin-top: 1px; */
+  background: rgba(0, 0, 0, 0.5);
   padding-right: 5px;
 }
 
